--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
+  <link rel="stylesheet" href="/assets/styles/reset.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.css"/>
+  <link rel="stylesheet" href="/assets/styles/style.css"/>
   <title>Weather Dashboard</title>
 </head>
 
@@ -31,6 +33,7 @@
                   Search
                 </button>
                 <hr class="hr weather-hr" />
+                <div class="card" style="width: 60%; border:1px black solid;"></div>
               </div>
             </div>
           </div>
@@ -51,7 +54,7 @@
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
