--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="/assets/styles/reset.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.css"/>
-  <link rel="stylesheet" href="/assets/styles/style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.css" />
+  <link rel="stylesheet" href="/assets/styles/style.css" />
   <title>Weather Dashboard</title>
 </head>
 
@@ -26,26 +26,27 @@
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
+              <input class="form-input weather-search" type="text" id="search-input"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
                 <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
                   Search
                 </button>
                 <hr class="hr weather-hr" />
-                <div class="card" style="width: 60%; border:1px black solid;"></div>
               </div>
             </div>
           </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
-
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
-      </div>
     </div>
+    </form>
+    <div class="list-group list-group-flush">
+    </div>
+    </aside>
+
+    <div class="col-lg-9 pb-3">
+      <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+      <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+    </div>
+  </div>
   </div>
 
   <!-- My API key: d0f096bacb872484351b2fb0efd9230b -->
